--- a/Mockup/Mockup_Inserat_editor.html
+++ b/Mockup/Mockup_Inserat_editor.html
@@ -115,10 +115,11 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </div>      
 </div>
 
-
-<div class="w3-container w3-text-grey" id="foo">
-    <p><img src="./icons/add_circle_outline_black_24dp.svg"></p>
-  </div>
+<div class="w3-container">
+    <button type="button" class="w3-button w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('picture-upload').style.display='block'">
+        <img src="./icons/add_circle_outline_black_24dp.svg" >
+    </button>
+</div>
 
 
 </div>
@@ -154,6 +155,10 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
         <span class="w3-button w3-grey w3-margin-bottom"> 
             <img src="./icons/remove_circle_outline_black_24dp.svg"> Spende an Schulsanitätsdienst
         </span>
+        <button type="button" class="w3-button w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('add-tag').style.display='block'">
+        <img src="./icons/add_circle_outline_black_24dp.svg" >
+    </button>
+
 
 
 
@@ -176,7 +181,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <!-- End page content -->
 </div>
 
-<!-- Newsletter Modal -->
+<!-- Overlays Modal -->
 <div id="newsletter" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom" style="padding:32px">
     <div class="w3-container w3-white w3-center">
@@ -188,6 +193,32 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </div>
   </div>
 </div>
+
+
+<div id="picture-upload" class="w3-modal">
+  <div class="w3-modal-content w3-animate-zoom" style="padding:32px">
+    <div class="w3-container w3-white w3-center">
+      <i onclick="document.getElementById('picture-upload').style.display='none'" class="fa fa-remove w3-right w3-button w3-transparent w3-xxlarge"></i>
+      <h2 class="w3-wide">Picture Uplaod</h2>
+      <p>Join our mailing list to receive updates on new arrivals and special offers.</p>
+      <p><input class="w3-input w3-border" type="file"></p>
+      <button type="button" class="w3-button w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('picture-upload').style.display='none'">Store</button>
+    </div>
+  </div>
+</div>
+
+<div id="add-tag" class="w3-modal">
+  <div class="w3-modal-content w3-animate-zoom" style="padding:32px">
+    <div class="w3-container w3-white w3-center">
+      <i onclick="document.getElementById('add-tag').style.display='none'" class="fa fa-remove w3-right w3-button w3-transparent w3-xxlarge"></i>
+      <h2 class="w3-wide">Add Tag</h2>
+      <p>Join our mailing list to receive updates on new arrivals and special offers.</p>
+      <p><input class="w3-input w3-border" type="file"></p>
+      <button type="button" class="w3-button w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('add-tag').style.display='none'">Store</button>
+    </div>
+  </div>
+</div>
+
 
 <script>
 // Accordion 
@@ -201,7 +232,7 @@ function myAccFunc() {
 }
 
 // Click on the "Jeans" link on page load to open the accordion for demo purposes
-document.getElementById("myBtn").click();
+//document.getElementById("myBtn").click();
 
 
 // Open and close sidebar
