--- a/Mockup/Mockup_Kategorien.html
+++ b/Mockup/Mockup_Kategorien.html
@@ -3,6 +3,7 @@
 <title>Kategorien</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="swapmeet.js" sync></script>
 <link rel="stylesheet" href="mockup.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -15,16 +16,16 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 <body class="w3-content" style="max-width:1200px">
 
 <!-- Sidebar/menu -->
+<!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
     <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
     <h3 class="w3-wide"><b>Swap-Meet</b></h3>
   </div>
-  <div class="w3-padding-64 w3-large w3-text-grey" styl
-e="font-weight:bold">
-<!-- Sidebar mit JS dynamisch mit Kategorien füllen -->
+  <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
+    <a href="#" class="w3-bar-item w3-button">Editor</a>
+    <a href="#" class="w3-bar-item w3-button">FAQ & Hilfe</a>
   </div>
-  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding" onclick="document.getElementById('newsletter').style.display='block'">Editor</a> 
 </nav>
 
 <!-- Top menu on small screens -->
@@ -54,6 +55,41 @@ e="font-weight:bold">
     Willkommen auf der Tauschbörse Swap-Meet. Ich bin ein Platzhaltertext. Ca. 50 wörter. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate 
     </p>
 </div>
+
+<div>
+
+<!-- Tabelle ordentlich darstellen(css), Tablle automatisch mit JS erweitern(keine Ahnung wie) -->
+ <table class="table">
+  <tr >
+<th class="table-row"> Name </th>
+<th class="table-row"> Anzahl der Inserate </th>
+  </tr>
+<tr>
+<td class="table-row-left"> beispiel </td>
+<td class="table-row-right"> beispiel </td>
+</tr>
+  <tr>
+  </tr>
+  <tr>
+  </tr>
+</table> 
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</div>
    <!-- Footer -->
   <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
     Nice Meat!
@@ -70,33 +106,6 @@ e="font-weight:bold">
     </div>
   </div>
 </div>
-<script>
-// Accordion 
-function myAccFunc() {
-  var x = document.getElementById("demoAcc");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-
-// Click on the "Jeans" link on page load to open the accordion for demo purposes
-document.getElementById("myBtn").click();
-
-
-// Open and close sidebar
-function w3_open() {
-  document.getElementById("mySidebar").style.display = "block";
-  document.getElementById("myOverlay").style.display = "block";
-}
- 
-function w3_close() {
-  document.getElementById("mySidebar").style.display = "none";
-  document.getElementById("myOverlay").style.display = "none";
-}
-</script>
-
 </body>
 </html>     
 
