--- a/Mockup/Mockup_Kategorien.html
+++ b/Mockup/Mockup_Kategorien.html
@@ -57,6 +57,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 </div>
 
 <div>
+<input id="name" type="button" value="Hallo">
+
 
 <!-- Tabelle ordentlich darstellen(css), Tablle automatisch mit JS erweitern(keine Ahnung wie) -->
  <table class="table">
