--- a/Mockup/Mockup_Kategorien.html
+++ b/Mockup/Mockup_Kategorien.html
@@ -1,81 +1,65 @@
+
+
 <!DOCTYPE html>
 <html lang ="de">
-<head>
-<title>Kategorien</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="mockup.css">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="swapmeet.js"sync></script>
-<style>
-.w3-sidebar a {font-family: "Roboto", sans-serif}
-body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
-</style>
-</head>
-<body class="w3-content" style="max-width:1200px">
-
-<!-- Sidebar/menu -->
-<!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
-  <div class="w3-container w3-display-container w3-padding-16">
-    <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-    <h3 class="w3-wide"><b>Swap-Meet</b></h3>
-  </div>
-  <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
-    <a href="#" class="w3-bar-item w3-button">Editor</a>
-    <a href="#" class="w3-bar-item w3-button">FAQ & Hilfe</a>
-  </div>
-</nav>
-
-<!-- Top menu on small screens -->
-<header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
-  <div class="w3-bar-item w3-padding-24 w3-wide">Swap-Meet</div>
-  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-</header>
-
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:250px">
-
-  <!-- Push down content on small screens -->
-  <div class="w3-hide-large" style="margin-top:83px"></div>
-  
-  <!-- Top header -->
-  <header class="w3-container w3-xlarge">
-    <p class="top">Swap Meet</p>
-  </header>
-
-
-  <!-- Product grid -->
-<div>
-   <p class="text-middle">
-    Willkommen auf der Tauschbörse Swap-Meet. Ich bin ein Platzhaltertext. Ca. 50 wörter. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate 
-    </p>
-</div>
-<div id="test5">
-<input id="name" type="button" value="Hallo">
-</div>
-   <!-- Footer -->
-  <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
-    Nice Meat!
-  </footer>
-<!-- Newsletter Modal -->
-<div id="newsletter" class="w3-modal">
-  <div class="w3-modal-content w3-animate-zoom" style="padding:32px">
-    <div class="w3-container w3-white w3-center">
-      <i onclick="document.getElementById('newsletter').style.display='none'" class="fa fa-remove w3-right w3-button w3-transparent w3-xxlarge"></i>
-      <h2 class="w3-wide">Neues Foto einfügen</h2>
-      <p>Neues Foto für ein Item</p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail"></p>
-      <button type="button" class="w3-button w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('newsletter').style.display='none'">Hochladen</button>
-    </div>
-  </div>
-</div>
-</body>
-</html>     
+   <head>
+      <title>Kategorien</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="mockup.css">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="swapmeet.js"sync></script>
+      <style>
+         .w3-sidebar a {font-family: "Roboto", sans-serif}
+         body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
+      </style>
+   </head>
+   <body class="w3-content" style="max-width:1200px" onload="categoryTable()">
+      <!-- Sidebar/menu -->
+      <!-- Sidebar/menu -->
+      <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
+         <div class="w3-container w3-display-container w3-padding-16">
+            <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
+            <h3 class="w3-wide"><b>Swap-Meet</b></h3>
+         </div>
+         <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
+            <a href="#" class="w3-bar-item w3-button">Editor</a>
+            <a href="#" class="w3-bar-item w3-button">FAQ & Hilfe</a>
+         </div>
+      </nav>
+      <!-- Top menu on small screens -->
+      <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
+         <div class="w3-bar-item w3-padding-24 w3-wide">Swap-Meet</div>
+         <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+      </header>
+      <!-- Overlay effect when opening sidebar on small screens -->
+      <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+      <!-- !PAGE CONTENT! -->
+      <div class="w3-main" style="margin-left:250px">
+      <!-- Push down content on small screens -->
+      <div class="w3-hide-large" style="margin-top:83px"></div>
+      <!-- Top header -->
+      <header class="w3-container w3-xlarge">
+         <p class="top">Swap Meet</p>
+      </header>
+      <!-- Product grid -->
+      <div>
+         <p class="text-middle">
+            Willkommen auf der Tauschbörse Swap-Meet. Ich bin ein Platzhaltertext. Ca. 50 wörter. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate 
+         </p>
+      </div>
+      <div id="test5">
+         <input id="name" type="button" value="Hallo">
+      </div>
+      <!-- Footer -->
+   </body>
+   <feet>
+      <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
+         Nice Meat!
+      </footer>
+   </feet>
+</html>
 
