--- a/Mockup/Mockup_Kategorien.html
+++ b/Mockup/Mockup_Kategorien.html
@@ -48,9 +48,10 @@
       <!-- Product grid -->
       <div>
          <p class="text-middle">
-            Willkommen auf der Tauschbörse Swap-Meet. Ich bin ein Platzhaltertext. Ca. 50 wörter. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate 
+Willkommen auf der Tauschbörse Swap-Meet. Ich bin ein Platzhaltertext. Ca. 50 wörter. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate 
          </p>
       </div>
+</script>
       <div id="test5">
          <input id="name" type="button" value="Hallo">
       </div>
