--- a/Mockup/Mockup_Kategorien.html
+++ b/Mockup/Mockup_Kategorien.html
@@ -44,18 +44,19 @@
          <p class="top">Swap Meet</p>
       </header>
       <!-- Product grid -->
-      <div>
-         <p class="text-middle">
-Willkommen auf der Tauschbörse Swap-Meet. Ich bin ein Platzhaltertext. Ca. 50 wörter. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate 
+      <div id="Willkommen" class="w3-container w3-border w3-padding-64 w3-light-grey">
+         <p class=" w3-container text-middle w3-medium w3-center">
+Willkommen auf der Tauschbörse Swap-Meet. Wir sind ein Schulprojekt des Grünen Campus Malchow. Wir haben es uns zur Aufagbe gemacht, euch eine Möglichkeit von freiem handeln ohne Geld zu schaffen. 
          </p>
       </div>
-      <div id="test5">
-         <input id="name" type="button" value="Hallo">
-      </div>
+      
+          <!--<div id="test5">
+      <input id="name" type="button" value="Hallo">
+      </div> -->
       <!-- Footer -->
    </body>
    <feet>
-      <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
+      <footer class="w3-padding-64 w3-light-blue w3-small w3-center" id="footer">
          Nice Meat!
       </footer>
    </feet>
