--- a/Mockup/Mockup_Kategorien.html
+++ b/Mockup/Mockup_Kategorien.html
@@ -49,10 +49,8 @@
 Willkommen auf der Tauschbörse Swap-Meet. Wir sind ein Schulprojekt des Grünen Campus Malchow. Wir haben es uns zur Aufagbe gemacht, euch eine Möglichkeit von freiem handeln ohne Geld zu schaffen. 
          </p>
       </div>
-      
-          <!--<div id="test5">
-      <input id="name" type="button" value="Hallo">
-      </div> -->
+      <div id="test5">
+      </div>
       <!-- Footer -->
    </body>
    <feet>
